--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,4 @@
-html,body {
+ html,body {
 			 
     -webkit-touch-callout: none; 
     -webkit-text-size-adjust: none;
@@ -8,44 +8,78 @@ html,body {
     height: 100%;
     width: 100%;
     font-family: Verdana;
-    background-color: #ff0040;
-
-			   
+    background-color: #e3dcdd;
+   
 }
+
 #bg{
 	width: 100%;
 	height: 100%;
-	  margin:0;
+	margin:0;
     padding:0;
+}
+#bg_connect{
+
+	position: absolute;
+
+	left:50%;
+	margin-left: -160px;
+}
+
+#bg_home{
+
+	position: absolute;
+
+	left:50%;
+	margin-left: -160px;
+}
+#header_tabla{
+	position: absolute;
+	top: 10px;
+
+}
+#footer{
+
+position: absolute;
+bottom: 0px;
+left:50%;
+margin-left: -160px;
+
 }
 
 .registro_compra{
+	
 	position: relative;
-	padding: 5px;
-	border-bottom: solid 1px #ccc;
+	background-color: #ccc;
+	color: #26426F;
+	font-size: 11px;
+	padding: 4;
+	height: 23px;
+	border-bottom: solid 1px #fff;
 }
 
 
 .c_id{
-	position: relative;
-	width: 33%;
-	float: left;
+	position: absolute;
+	width: 81px;
 
+	padding: 5px;
+	left: 5px;
 }
 .c_precio{
-	position: relative;
-	width: 33%;
-	float: left;
-	text-align: center;
+	position: absolute;
+	width: 76px;
 
-	color: #125488;
+	left: 96px;
+	text-align: center;
+	padding: 5px;
 }
 .c_puntos{
-	position: relative;
-	width: 33%;
-	float: left;
+	position: absolute;
+	width: 55px;
 	text-align: right;
-	color: #BD0202;
+	left: 170px;
+	padding: 5px;
 }
 #content{
 	width: 100%;
@@ -53,16 +87,57 @@ html,body {
 	padding: 0px;
 	margin: 0px;
 }
+#compras{
+	position: absolute;
+	width: 320px;
+	left: 50%;
+	margin-left: -160px;
+	height: 200px;
+
+	top: 234px;
+}
 #lista{
 
-	width: 100%;
-	position: absolute;
-	left: 100%;
-	top: 30%;
-	height: 40%;
+
+position: absolute;
+	
+
+
+width: 243px;
+	
+
+
+left: 40px;
+	
+	
+	
+
+
+height: 150px;
 	overflow: scroll;
-	padding: 20px;
+
 	-webkit-overflow-scrolling: touch;
+
+
+
+top: 33px;
+
+
+}
+
+#btn_back{
+	
+	position: absolute;
+	top: 1px;
+	left: 3px;
+
+}
+#btn_salir{
+
+	position: absolute;
+	top: 2px;
+	right: 3px;
+
 }
 #btn_volver{
 
@@ -135,8 +210,8 @@ html,body {
 
 #btn_connect{
 	left: 50%;
-	top: 49%;
-	margin-left: -123px;
+	top: 294px;
+	margin-left: -159px;
 	position: absolute;
 }
 
@@ -147,13 +222,13 @@ html,body {
 	left: 50%;
 	
 
-	top: 50%;
+	top: 304px;
 	
 
-	margin-left: -135px;
+	margin-left: -157px;
 	
 
-	margin-top: -90px;
+	margin-top: -66px;
 	position: absolute;
 
 }
@@ -161,13 +236,15 @@ html,body {
 #btn_mis_compras{
 
 	left: 50%;
-	top: 49%;
 	
 
-	margin-left: -135px;
+	top: 296px;
 	
 
-	margin-top: 2px;
+	margin-left: -157px;
+	
+
+	margin-top: -3px;
 	position: absolute;
 
 }
@@ -175,13 +252,15 @@ html,body {
 #btn_lorem{
 
 	left: 50%;
-	top: 49%;
 	
 
-	margin-left: -136px;
+	top: 296px;
 	
 
-	margin-top: 87px;
+	margin-left: -156px;
+	
+
+	margin-top: 52px;
 	position: absolute;
 
 }
@@ -201,11 +280,11 @@ html,body {
 
 #avatar{
 	left: 50%;
-	top: 10%;
-	margin-left: -37px;
+	top: 61px;
+	margin-left: -61px;
 	position: absolute;
 	border-radius:60px;
-	margin-top: -10px;
+	margin-top: 0px;
 }
 
 
@@ -227,19 +306,20 @@ html,body {
 	
 
 
-	color: #24959D;
+	color: #5c87b6;
 	position: absolute;
-	top: 27%;
+	top: 200px;
 	width: 100%;
 	text-align: center;
+	font-size: 18px;
 
+	font-family: Verdana;
 }
 #codigo{
 	position: absolute;
-	top: 50%;
-	margin-top: -89px;
+	top: 290px;
 	left: 50%;
-	margin-left: -131px;
+	margin-left: -157px;
 }
 #codigo > div{
 	position: relative;
@@ -288,6 +368,7 @@ html,body {
 	text-align: center;
 }
 
+
 .spinner {
       position: absolute;
       width: 30px;
@@ -330,5 +411,3 @@ html,body {
       from {opacity: 1;}
       to {opacity: 0.25;}
  }
-
-
